--- a/app/design/frontend/rwd/default/template/checkout/onepage.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/onepage.phtml
@@ -10,17 +10,17 @@
  * http://opensource.org/licenses/afl-3.0.php
  * If you did not receive a copy of the license and are unable to
  * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
+ * to license@magento.com so we can send you a copy immediately.
  *
  * DISCLAIMER
  *
  * Do not edit or add to this file if you wish to upgrade Magento to newer
  * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
+ * needs please refer to http://www.magento.com for more information.
  *
  * @category    design
- * @package     base_default
- * @copyright   Copyright (c) 2013 Magento Inc. (http://www.magentocommerce.com)
+ * @package     rwd_default
+ * @copyright   Copyright (c) 2006-2014 X.commerce, Inc. (http://www.magento.com)
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
@@ -41,20 +41,17 @@ $shipping = ($current_currency != 'IDR') ? round($shipping) * $curr_rate : $ship
 
 error_log('shipping = '.$shipping);
 error_log('grandtotal di luar js= '.$grandTotal);
-
-?> 
+?>
 <div class="page-title">
     <h1><?php echo $this->__('Checkout') ?></h1>
 </div>
-<!--<script type="text/javascript" src="<?php //echo $this->getSkinUrl('js/jquery.min.js') ?>"></script>-->
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" src="<?php echo $this->getSkinUrl('js/no-conflict.js') ?>"></script>
-    <script type="text/javascript" src="<?php echo $this->getSkinUrl('js/fancybox/jquery.fancybox.js') ?>"></script>
+<script type="text/javascript" src="<?php echo $this->getJsUrl('varien/accordion.js') ?>"></script>
+<script type="text/javascript" src="<?php echo $this->getSkinUrl('js/opcheckout.js') ?>"></script>
+<script type="text/javascript" src="<?php echo $this->getSkinUrl('js/opcheckout_rwd.js') ?>"></script>
 
-    <link rel="stylesheet" type="text/css" href="<?php echo $this->getSkinUrl('js/fancybox/jquery.fancybox.css') ?>">
+<script type="text/javascript" src="<?php echo $this->getSkinUrl('js/fancybox/jquery.fancybox.js') ?>"></script>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getSkinUrl('js/fancybox/jquery.fancybox.css') ?>">
 
-    <script type="text/javascript" src="<?php echo $this->getJsUrl('varien/accordion.js') ?>"></script>
-    <script type="text/javascript" src="<?php echo $this->getSkinUrl('js/opcheckout.js') ?>"></script>
 
 <?php if($mode == 'production') { ?>
     <script type="text/javascript" src="https://api.veritrans.co.id/v2/assets/js/veritrans.min.js"> </script>
@@ -64,8 +61,8 @@ error_log('grandtotal di luar js= '.$grandTotal);
 
 
 
-<ol class="opc" id="checkoutSteps">
 
+<ol class="opc opc-firststep-<?php echo $this->getActiveStep() ?>" id="checkoutSteps">
 <?php $i=0; foreach($this->getSteps() as $_stepId => $_stepInfo): ?>
 <?php if (!$this->getChild($_stepId) || !$this->getChild($_stepId)->isShow()): continue; endif; $i++ ?>
     <li id="opc-<?php echo $_stepId ?>" class="section<?php echo !empty($_stepInfo['allow'])?' allow':'' ?><?php echo !empty($_stepInfo['complete'])?' saved':'' ?>">
@@ -94,20 +91,17 @@ error_log('grandtotal di luar js= '.$grandTotal);
     );
 //]]>
 </script>
-<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
 <script type="text/javascript">
-
-    
+//jQuery(document).ready(function () {});
 
     function savePayment()
     { 
-
         
         var curr =  "<?php echo $current_currency;?>" ; 
         var total = Math.round($("price").value);
         var grand_total =  (curr.toString() != 'IDR') ? Math.round(total) * <?php echo $curr_rate;?> : total;
         console.log(grand_total);
-//===============================================================================
+
             <?php if($mode == 'production')
             {?>
                 Veritrans.url = "https://api.veritrans.co.id/v2/token";
@@ -247,38 +241,7 @@ error_log('grandtotal di luar js= '.$grandTotal);
           function random5digit(){
             return paddy(Math.floor(Math.random() * 99999), 5); 
           }
-        /*updateInput1();
-
-          $('#mandiriclickpay_card_number').keyup(function(){
-            updateInput1();
-          });
-
-          $('#mandiriclickpay_input3').val(random5digit());
-          $('#mandiriclickpay_input2').value = grand_total;
-          alert($('#mandiriclickpay_input2').value);
-
-          function updateInput1(){
-            var ccNumber = $('#mandiriclickpay_card_number').val();
-            if(ccNumber.length > 9) {
-              $('#mandiriclickpay_input1').val(ccNumber.substring(ccNumber.length, ccNumber.length-10));
-            }
-          }
-
-          function paddy(n, p, c) {
-            var pad_char = typeof c !== 'undefined' ? c : '0';
-            var pad = new Array(1 + p).join(pad_char);
-            return (pad + n).slice(-pad.length);
-          }
-
-          function random5digit(){
-            return paddy(Math.floor(Math.random() * 99999), 5); 
-          }
-     */     
-    }
-
-
-    
+     
+    }    
 </script>
-
-
 
